--- a/Profile.html
+++ b/Profile.html
@@ -15,6 +15,11 @@
     <meta name="keywords" content="">
     <meta name="author" content="">
 
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <!-- Bootstrap Css -->
     <link href="bootstrap-assets/css/bootstrap.min.css" rel="stylesheet">
 
@@ -26,6 +31,9 @@
     <link href="plugins/Icons/et-line-font/style.css" rel="stylesheet">
     <link href="plugins/animate.css/animate.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+
+
+
     <!-- Icons Font -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -56,14 +64,14 @@
               <div class="collapse navbar-collapse text-center" id="bs-example-navbar-collapse-1">
                   <div class="col-md-4 col-xs-4 nav-wrap">
                       <ul class="nav navbar-nav">
-                            <li><a href="index.html" class="page-scroll">Home</a></li>
-                            <li><a href="Playlists.html" class="page-scroll">Playlists</a></li>
-                            <li><a href="Profile.html" class="page-scroll">Profile</a><li>
+                            <li><a href="index.html" class="page-scroll"> <span class="glyphicon glyphicon-home"></span> Home </a></li>
+                            <li><a href="Playlists.html" class="page-scroll"><span class="glyphicon glyphicon-th-list"></span> Library </a></li>
+                            <li><a href="Profile.html" class="page-scroll"><span class="glyphicon glyphicon-user"></span> Profile </a></li>
                       </ul>
                   </div>
-                  <div class="social-media hidden-xs">
+                  <div class="social-media login">
                       <ul class="nav navbar-nav">
-                            <li><a href="login.html" class="page-scroll">Login</a></li>
+                           <li><a href="login.html" class="page-scroll"> <span class="glyphicon glyphicon-circle-arrow-right"></span> Login </a></li>
                       </ul>
                   </div>
               </div>
@@ -78,17 +86,16 @@
         <div class="container">
             <br> </br>
             <h2></h2>
+             <h4>Profile</h4>
             <hr class="sep">
-            <p>
-
-
-            <p> <strong></strong> </p>
             <div class="row wow fadeInUp" data-wow-delay=".3s">
-                <div class="col-md-4 col-lg-12">
+                <div class="col-lg-12">
 
                     <div class="team">
                         <img class="img-responsive center-block" src="img/team/adams.jpg" alt="3">
-                        <h4>Pofile</h4>
+                        <h6>Username: <onhover>adamschilperoort </onhover> </h6>
+                        <h6>Password: <onhover>1234567890</onhover> </h6>
+                       
 
                     </div>
 
