--- a/login.html
+++ b/login.html
@@ -43,17 +43,27 @@
 	============================================= -->
     <section id="welcome">
         <div class="container">
+            <br></br> <br></br>
             <h2><span>Login:</span></h2>
             <hr class="sep">
 
-              <form class ="Login" action="/login_page.php">
+              <form class ="Login" action="index.html">
                    <input type="text" placeholder="username" name="search2">
-                   <input type="text" placeholder="password" name="search2">
-                  <button id="Submit" type="submit"><i class="fa fa-searchZ"></i></button>
+                   <input type="password" placeholder="password" name="search2">
+                  <button id="Submit" type="submit"><i class="fa fa-arrow-right"></i></button>
               </form>
+
+            <br></br><br></br>
+            <h6>Or</h6>
+            <br></br>
+            <h6>Create Account
+              <button onclick="location.href='CreateAccount.html';"  id="Submit" type="submit"><i class="fa fa-arrow-right"></i></button>
+            </h6>
+
 
 
         </div>
+      </section>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
