--- a/Playlists.html
+++ b/Playlists.html
@@ -14,6 +14,10 @@
     <meta name="keywords" content="">
     <meta name="author" content="">
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <!-- Bootstrap Css -->
     <link href="bootstrap-assets/css/bootstrap.min.css" rel="stylesheet">
 
@@ -56,8 +60,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                  <div class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                       <input type="text" placeholder="Search..">
+                  <div class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2" aria-expanded="false">
+                       <input class="searchbar" type="text" placeholder="Search">
                   </div>
 
                     <!-- <a class="navbar-brand" href="#"><img src="img/logo/evensmaller.png" class="img-responsive" alt="logo"></a> -->
@@ -65,15 +69,15 @@
                 <div class="collapse navbar-collapse text-center" id="bs-example-navbar-collapse-1">
                     <div class="col-md-4 col-xs-4 nav-wrap">
                         <ul class="nav navbar-nav">
-                              <li><a href="index.html" class="page-scroll">Home</a></li>
-                              <li><a href="Playlists.html" class="page-scroll">Playlists</a></li>
-                              <li><a href="Profile.html" class="page-scroll">Profile</a><li>
+                              <li><a href="index.html" class="page-scroll"> <span class="glyphicon glyphicon-home"></span> Home </a></li>
+                              <li><a href="Playlists.html" class="page-scroll"><span class="glyphicon glyphicon-th-list"></span> Library </a></li>
+                              <li><a href="Profile.html" class="page-scroll"><span class="glyphicon glyphicon-user"></span> Profile </a></li>
                         </ul>
                     </div>
                     <div class="social-media hidden-xs">
-                         <form class ="search" action="/action_page.php">
-                              <input type="text" placeholder="Search.." name="search2">
-                              <button id="searchButton" type="submit"><i class="fa fa-searchZ"></i></button>
+                          <form class ="search" action="/action_page.php">
+                              <input type="text" placeholder="Search" name="search2">
+                              <button id="searchButton" type="submit"><i class="fa fa-search"></i></button>
                         </form>
                     </div>
                 </div>
@@ -95,7 +99,7 @@
 	============================================= -->
     <section id="portfolio">
         <div class="container-fluid">
-            <h2>Playlists</h2>
+            <h2>Albums</h2>
             <hr class="sep">
             <p>
 
