--- a/Playlists.html
+++ b/Playlists.html
@@ -115,6 +115,11 @@
                         <img src="img/portfolio/2.jpg" class="img-responsive" alt="2">
                     </a>
                 </div>
+                <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay=".3s">
+                    <a href="img/portfolio/12.jpg" class="portfolio-box" data-lightbox="image-2" data-title="">
+                        <img src="img/portfolio/12.jpg" class="img-responsive" alt="2">
+                    </a>
+                </div>
             </div>
             <p>
             <hr class="sep">
